--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
 .App {
   text-align: center;
+  padding: 100px 0 100px 100px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.wrapper {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.wrapper .barcode-preview {
+  min-width: 180px;
+  min-height: 180px;
+  max-height: 300px;
+  max-width: 300px;
+  margin: 30px 0 0 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.wrapper .barcode-preview.hide-img {
+  display: none;
+}
+
+.wrapper .barcode-preview.show-img {
+  display: block;
+}
+
+.wrapper>div:nth-child(3) {
+  flex-direction: column;
+  margin: 20px 0 0 0;
+}
+
+.wrapper>div:nth-child(3) input[type="text"] {
+  width: 300px !important;
+  height: 80px;
 }
